@@ -1,17 +1,17 @@
 package it.uniroma3.diadia;
+
 import it.uniroma3.diadia.ambienti.Labirinto;
 import java.util.*;
 
-import it.uniroma3.diadia.ambienti.LabirintoBuilder;
 import static org.junit.jupiter.api.Assertions.*;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
-import it.uniroma3.diadia.giocatore.Giocatore; 
+
 /**
  * Classe di Test di Accettazione per simulare partite intere.
  * @author Davide De Prosperis, Matricola: 575620
- * @author Gabriele Crescenzi, Matricola: 628793
+ * @author Leonardo Coloricchio, Matricola: 628489
  * @version 3.0
  */
 public class DiaDiaTest {
@@ -23,7 +23,7 @@ public class DiaDiaTest {
 
 	@Test
 	public void testPartitaVinta() {
-		List<String> comandi = List.of("vai nord"); 		
+		List<String> comandi = Arrays.asList("vai nord"); 		
 		IOSimulator io = new IOSimulator(comandi);
 		DiaDia gioco = new DiaDia(io);
 		gioco.gioca(); 
@@ -33,10 +33,19 @@ public class DiaDiaTest {
 
 	@Test
 	public void testPartitaEsplorazioneCompleta() {
-		List<String> comandi = List.of("guarda", "vai est", "guarda", "prendi osso", "vai ovest", "posa osso", "fine");
+        // Creiamo un labirinto con un osso a Est per far funzionare l'esplorazione
+        Labirinto lab = Labirinto.newBuilder()
+                .addStanzaIniziale("Atrio")
+                .addStanza("Campus")
+                .addAdiacenza("Atrio", "Campus", "est")
+                .addAdiacenza("Campus", "Atrio", "ovest")
+                .addAttrezzo("osso", 1) 
+                .getLabirinto();
+
+		List<String> comandi = Arrays.asList("guarda", "vai est", "guarda", "prendi osso", "vai ovest", "posa osso", "fine");
 		
 		IOSimulator io = new IOSimulator(comandi);
-		DiaDia gioco = new DiaDia(io);
+		DiaDia gioco = new DiaDia(lab, io);
 		gioco.gioca(); 
 		
 		assertTrue(io.hasMessaggio("Grazie di aver giocato!"));
@@ -44,7 +53,7 @@ public class DiaDiaTest {
 
 	@Test
 	public void testPartitaPersaPerCfu() {
-		int cfu = Giocatore.CFU_INIZIALI; 
+		int cfu = Configuratore.getCfu(); 
 		List<String> comandi = new ArrayList<>(); 
 		for (int i = 0; i < cfu; i++) {
 			if (i % 2 == 0) {
@@ -53,8 +62,16 @@ public class DiaDiaTest {
 				comandi.add("vai ovest");
 			}
 		}
+        // Creiamo un labirinto dove le direzioni Est e Ovest esistono fisicamente
+        Labirinto lab = Labirinto.newBuilder()
+                .addStanzaIniziale("Atrio")
+                .addStanza("StanzaEst")
+                .addAdiacenza("Atrio", "StanzaEst", "est")
+                .addAdiacenza("StanzaEst", "Atrio", "ovest")
+                .getLabirinto();
+
 		IOSimulator io = new IOSimulator(comandi);
-		DiaDia gioco = new DiaDia(io);
+		DiaDia gioco = new DiaDia(lab, io);
 		gioco.gioca(); 
 		
 		assertTrue(io.hasMessaggio("Hai esaurito i CFU..."));
@@ -64,12 +81,12 @@ public class DiaDiaTest {
 	
 	@Test
 	public void testPartitaVintaConBuilder() {
-	    Labirinto l = new LabirintoBuilder()
+	    Labirinto l = Labirinto.newBuilder()
 	        .addStanzaIniziale("salotto")
 	        .addStanzaVincente("camera")
 	        .addAdiacenza("salotto", "camera", "nord")
 	        .getLabirinto();
-	    List<String> comandi = List.of("vai nord");
+	    List<String> comandi = Arrays.asList("vai nord");
 	    IOSimulator io = new IOSimulator(comandi);
 	    DiaDia gioco = new DiaDia(l, io);
 	    gioco.gioca();
@@ -78,13 +95,13 @@ public class DiaDiaTest {
 
 	@Test
 	public void testPrendiAttrezzoEVinci() {
-	    Labirinto l = new LabirintoBuilder()
+	    Labirinto l = Labirinto.newBuilder()
 	        .addStanzaIniziale("salotto")
 	        .addAttrezzo("chiave", 1)
 	        .addStanzaVincente("camera")
 	        .addAdiacenza("salotto", "camera", "nord")
 	        .getLabirinto();
-	    List<String> comandi = List.of("prendi chiave", "vai nord");
+	    List<String> comandi = Arrays.asList("prendi chiave", "vai nord");
 	    IOSimulator io = new IOSimulator(comandi);
 	    DiaDia gioco = new DiaDia(l, io);
 	    gioco.gioca();
@@ -93,15 +110,15 @@ public class DiaDiaTest {
 
 	@Test
 	public void testPartitaPersa() {
-	    Labirinto l = new LabirintoBuilder()
+	    Labirinto l = Labirinto.newBuilder()
 	        .addStanzaIniziale("salotto")
 	        .addStanza("cucina")
 	        .addAdiacenza("salotto", "cucina", "est")
 	        .addAdiacenza("cucina","salotto","ovest")
 	        .addStanzaVincente("camera")
 	        .getLabirinto();
-	    int cfu = Giocatore.CFU_INIZIALI;
-	    List<String> comandi = new ArrayList<String>();
+	    int cfu = Configuratore.getCfu();
+	    List<String> comandi = new ArrayList<>();
 	    for (int i = 0; i < cfu; i++) {
 	        if (i % 2 == 0) {
 	            comandi.add("vai est");
